# simple_asio

./: CMakeLists.txt
asio_buffer/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  client.h  main.cpp
common/: chat_message.h
manage_memory/: CMakeLists.txt  main.cpp
multicast/receiver/: CMakeLists.txt  main.cpp
multicast/sender/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp  server.h
theboostcpplibraries/: CMakeLists.txt  async_timer.h  main.cpp  network_programming.h
uidaemon_client/: uidaemon_client.h
